test/visibility/type-shadow.good
type-shadow.chpl:12: error: invalid type specifier 'R(type int(64))'
type-shadow.chpl:11: note: type 'R' is not generic
type-shadow.chpl:12: note: did you forget the 'new' keyword?
